Move q-bar to top (header redesign)
* Decrease --q-space-base to 8px

* Remove q-bar from top level

* Add q-bar to index, feed, item-overview and editor page

* Move q-bar to top

* Use slot in q-bar to show back button on specific pages

* Define min-width for icon-button with text

* Move q-status-bar to q-bar

* Show logo only on index page

* Define height of q-bar based on --q-space-base

* Add updated back button

* Move status-bar to the right and show account-button only on index page

* Make some style adjustments after change of space-base

* Change color of border

* Style adjustment of q-bar

* Fix padding left and right of q-bar

* Better handle q-bar buttons on small screens

* Revert --q-space-base back to 16px

* Display text in save and activate/deactivate buttons

--- a/client/src/styles/layout.css
+++ b/client/src/styles/layout.css
@@ -38,21 +38,10 @@ body {
   background-color: white;
 }
 
-q-bar {
-  height: 100%;
-  flex-grow: 0;
-  flex-shrink: 0;
-
-  width: 52px;
-}
-
 q-screen {
-  height: 100%;
   flex-grow: 1;
-  flex-shrink: 1;
   transition: opacity 0.2s ease-out;
-  min-width: calc(700px - 52px);
-  max-width: calc(100% - 52px);
+  margin-top: calc(var(--q-space-base) * 3.5);
 }
 
 q-screen.is-navigating {
