--- a/client/src/elements/organisms/q-bar.css
+++ b/client/src/elements/organisms/q-bar.css
@@ -1,23 +1,43 @@
 q-bar {
   display: flex;
+  flex-direction: row;
   align-items: center;
-  flex-direction: column;
-
-  background: var(--q-color-gray-2);
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.25);
-
-  padding: calc(var(--q-space-base) / 2);
+  background: var(--q-color-gray-1);
+  box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.1);
+  position: fixed;
+  width: 100%;
+  height: calc(var(--q-space-base) * 3.5);
+  top: 0px;
+  z-index: 500;
 }
 
-.q-bar__section:last-child {
-  margin-top: auto;
-  margin-bottom: 0;
+.q-bar__left {
+  width: 45%;
+  display: flex;
+  flex-flow: row wrap;
+  padding-left: calc(var(--q-space-base) * 1.5);
 }
 
-.q-bar__section {
-  margin-bottom: calc(var(--q-space-base) / 2);
+.q-bar__center {
+  width: 10%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
 }
 
-.q-bar__item {
-  margin-bottom: calc(var(--q-space-base) / 2);
+.q-bar__center > * {
+  width: 40px;
+  height: 40px;
+}
+
+.q-bar__right {
+  width: 45%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-end;
+  padding-right: calc(var(--q-space-base) * 1.5);
+}
+
+.q-bar__help {
+  padding-left: var(--q-space-base);
 }
