--- a/client/src/elements/organisms/tool-status-bar.css
+++ b/client/src/elements/organisms/tool-status-bar.css
@@ -1,25 +1,30 @@
 tool-status-bar {
-  padding: calc(var(--q-space-base) / 2);
-
   display: flex;
-  flex-direction: column;
   align-items: center;
-
-  background: var(--q-color-gray-2);
-  border-left: 1px solid var(--q-color-gray-5);
+  margin-left: var(--q-space-base);
+  padding-right: calc(var(--q-space-base) / 2);
+  border-right: solid 1px var(--q-color-gray-4);
 }
 
 .tool-status-bar__group {
   display: flex;
-  flex-direction: column;
   align-items: center;
 }
 
-.tool-status-bar__group:not(:last-child) {
-  margin-bottom: calc(var(--q-space-base) / 2);
-  border-bottom: 1px solid var(--q-color-gray-4);
+.tool-status-bar__item {
+  margin-right: calc(var(--q-space-base) / 2);
 }
 
-.tool-status-bar__item {
-  margin-bottom: calc(var(--q-space-base) / 2);
+.tool-status-bar__button {
+  min-width: 140px;
 }
+
+@media screen and (max-width: 1010px) {
+  tool-status-bar .icon-button__text {
+    display: none;
+  }
+  .tool-status-bar__button {
+    min-width: 0px;
+  }
+}
+
