Redesign error message in preview

--- a/client/src/elements/item-preview/preview-container.css
+++ b/client/src/elements/item-preview/preview-container.css
@@ -1,6 +1,7 @@
 preview-container {
   position: relative;
   display: block;
+  height: 350px;
   margin-top: var(--q-space-base);
   margin-bottom: var(--q-space-base);
 }
