--- a/client/src/elements/molecules/radio-button-group.css
+++ b/client/src/elements/molecules/radio-button-group.css
@@ -2,15 +2,12 @@ radio-button-group {
   width: 100%;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
 }
 
 .radio-button-group__option {
   position: relative;
-  margin-bottom: calc(var(--q-ui-space) / 2);
   flex-shrink: 0;
-  width: 70px;
+  width: 100%;
   height: 30px;
 }
 
@@ -54,13 +51,6 @@ radio-button-group {
   color: var(--q-color-white);
 }
 
-.radio-button-group__option label svg {
-  display: block;
-  width: 12px;
-  height: 12px;
-  fill: var(--q-color-gray-6);
-}
-
 .radio-button-group__option input[type="radio"] {
   visibility: hidden;
   width: 0;
@@ -72,12 +62,4 @@ radio-button-group {
 .radio-button-group__option input[type="radio"]:checked ~ label {
   background: var(--q-color-primary-4);
   color: var(--q-color-white);
-}
-
-.radio-button-group__option input[type="radio"]:checked ~ label svg {
-  fill: var(--q-color-white);
-}
-
-.radio-button-group__option svg {
-  fill: var(--q-color-white);
 }
