Move notifications to schema-editor-wrapper level

--- a/client/src/pages/editor.css
+++ b/client/src/pages/editor.css
@@ -1,18 +1,13 @@
 .editor {
-  height: 100%;
-  display: flex;
+  padding: calc(var(--q-space-base) * 2) calc(var(--q-space-base) * 2);
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-.editor main {
-  padding: calc(var(--q-space-base) * 2) calc(var(--q-space-base) * 3);
-  flex-grow: 1;
-}
-
-.editor main section {
+.editor section {
   padding-bottom: var(--q-space-base);
   border-bottom: 1px solid var(--q-color-gray-4);
   margin-bottom: calc(var(--q-space-base) * 2);
-  width: 85vw;
 }
 
 .editor__preview {
@@ -56,7 +51,6 @@
   border-bottom: 1px solid var(--q-color-gray-4);
 }
 
-
 /* make the options more compact by removing the margin around fieldsets */
 .editor__options fieldset > schema-editor-wrapper {
   margin: 0 !important;
@@ -66,7 +60,10 @@
   margin-bottom: 0;
 }
 
-.editor__options schema-editor-wrapper schema-editor-wrapper schema-editor-wrapper {
+.editor__options
+  schema-editor-wrapper
+  schema-editor-wrapper
+  schema-editor-wrapper {
   margin-bottom: 0;
 }
 
