--- a/client/src/elements/item-preview/preview-container.css
+++ b/client/src/elements/item-preview/preview-container.css
@@ -1,8 +1,9 @@
 preview-container {
-  max-width: calc(85vw - 250px);
+  width: 680px;
   position: relative;
   display: block;
-  height: 350px;
+  height: 370px;
   margin-top: var(--q-space-base);
+  margin-right: var(--q-space-base);
   margin-bottom: var(--q-space-base);
 }
