Implement more validation-rules and refactore validation code

--- a/client/src/elements/schema-editor/schema-editor-table.css
+++ b/client/src/elements/schema-editor/schema-editor-table.css
@@ -13,7 +13,8 @@ schema-editor-table .wtHolder {
   line-height: 18px;
 }
 
-schema-editor-table .rowHeader, schema-editor-table .colHeader {
+schema-editor-table .rowHeader,
+schema-editor-table .colHeader {
   color: var(--q-text-ultralight-color);
 }
 
