--- a/client/src/elements/item-preview/preview-container.css
+++ b/client/src/elements/item-preview/preview-container.css
@@ -1,8 +1,8 @@
 preview-container {
-  max-width: calc(85vw - 250px);
   position: relative;
   display: block;
   height: 350px;
+  width: 100%;
   margin-top: var(--q-space-base);
   margin-bottom: var(--q-space-base);
 }
