--- a/client/src/elements/molecules/radio-button-group.css
+++ b/client/src/elements/molecules/radio-button-group.css
@@ -7,7 +7,7 @@ radio-button-group {
 .radio-button-group__option {
   position: relative;
   flex-shrink: 0;
-  width: 110%;
+  width: 100px;
   height: 30px;
 }
 
