--- a/client/src/elements/item-preview/preview-container.css
+++ b/client/src/elements/item-preview/preview-container.css
@@ -1,8 +1,8 @@
 preview-container {
   position: relative;
   display: block;
-  height: 350px;
+  min-height: 350px;
+  height: 100%;
   width: 100%;
-  margin-top: var(--q-space-base);
-  margin-bottom: var(--q-space-base);
+  padding-top: var(--q-space-base);
 }
