Fix height to 500px on item-overview page

--- a/client/src/pages/item-overview.css
+++ b/client/src/pages/item-overview.css
@@ -7,6 +7,10 @@
   flex-grow: 1;
 }
 
+.item-overview__content > item-preview {
+  height: 500px;
+}
+
 .item-overview__content > section {
   margin-top: calc(var(--q-space-base) * 2);
 }
