(item-preview) improve preview-container size (min height but using available height if options column is high)

--- a/client/src/elements/item-preview/preview-container.css
+++ b/client/src/elements/item-preview/preview-container.css
@@ -1,8 +1,9 @@
 preview-container {
   position: relative;
   display: block;
+  overflow: auto;
   min-height: 350px;
-  height: 100%;
   width: 100%;
-  padding-top: var(--q-space-base);
+  margin-top: var(--q-space-base);
+  margin-bottom: calc(var(--q-space-base) / 2);
 }
