--- a/client/src/elements/item-preview/item-preview.css
+++ b/client/src/elements/item-preview/item-preview.css
@@ -1,11 +1,23 @@
 item-preview {
   display: block;
+  position: relative;
+  min-height: 400px;
+}
+
+.item-preview__holder {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .item-preview__settings {
   width: 100%;
   display: flex;
   justify-content: space-between;
+  flex-grow: 0;
+  flex-shrink: 0;
 }
 
 .item-preview__settings > div {
