--- a/client/src/pages/editor.css
+++ b/client/src/pages/editor.css
@@ -17,11 +17,13 @@
 
 .editor__preview {
   display: flex;
-  flex-flow: row;
+  flex-direction: row;
 }
 
 .editor__preview item-preview {
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .editor__preview .editor__options {
