--- a/client/src/pages/editor.css
+++ b/client/src/pages/editor.css
@@ -10,7 +10,6 @@
 
 .editor main section {
   padding-bottom: var(--q-space-base);
-  border-bottom: 1px solid var(--q-color-gray-4);
   margin-bottom: calc(var(--q-space-base) * 2);
   width: 85vw;
 }
@@ -53,11 +52,7 @@
   font-weight: var(--q-h6-weight);
   color: var(--q-text-light-color);
   margin-bottom: calc(var(--q-space-base) / 2);
-
-  padding-bottom: 3px;
-  border-bottom: 1px solid var(--q-color-gray-4);
 }
-
 
 /* make the options more compact by removing the margin around fieldsets */
 .editor__options fieldset > schema-editor-wrapper {
@@ -68,7 +63,10 @@
   margin-bottom: 0;
 }
 
-.editor__options schema-editor-wrapper schema-editor-wrapper schema-editor-wrapper {
+.editor__options
+  schema-editor-wrapper
+  schema-editor-wrapper
+  schema-editor-wrapper {
   margin-bottom: 0;
 }
 
