--- a/client/src/livingdocs-component-app/app.css
+++ b/client/src/livingdocs-component-app/app.css
@@ -2,7 +2,9 @@ html {
   box-sizing: border-box;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
@@ -58,7 +60,7 @@ html {
 
   font-family: Roboto, sans-serif;
   font-size: var(--q-text-size);
-  caret-color: var(--q-color-primary-5);
+  caret-color: var(--q-color-primary-2);
 }
 
 .search input::placeholder {
@@ -109,7 +111,7 @@ html {
 }
 
 .item-list-entry.selected {
-  background: var(--q-color-primary-4);
+  background: var(--q-color-primary-2);
   color: var(--q-color-white);
 }
 
