Change --q-space-base from 16px to 8px and adjust all uses of it

--- a/client/src/elements/item-preview/preview-container.css
+++ b/client/src/elements/item-preview/preview-container.css
@@ -3,6 +3,6 @@ preview-container {
   display: block;
   overflow: auto;
   width: 100%;
-  margin-top: var(--q-space-base);
-  margin-bottom: calc(var(--q-space-base) / 2);
+  margin-top: calc(var(--q-space-base) * 2);
+  margin-bottom: var(--q-space-base);
 }
