--- a/client/src/elements/schema-editor/schema-editor.css
+++ b/client/src/elements/schema-editor/schema-editor.css
@@ -9,17 +9,17 @@ schema-editor fieldset {
 }
 
 schema-editor fieldset > schema-editor-wrapper {
-  margin: calc(var(--q-space-base) * 2) 0 calc(var(--q-space-base) / 2) 0;
+  margin: calc(var(--q-space-base) * 4) 0 var(--q-space-base) 0;
 }
 
 schema-editor fieldset fieldset > schema-editor-wrapper {
   padding: 0 0 0 20px;
-  margin: calc(var(--q-space-base) * 2) 0 calc(var(--q-space-base) / 2) 0;
+  margin: calc(var(--q-space-base) * 4) 0 var(--q-space-base) 0;
 }
 
 schema-editor fieldset fieldset.compact > schema-editor-wrapper {
   padding: 0 0 0 10px;
-  margin-top: calc(var(--q-space-base) / 2);
+  margin-top: var(--q-space-base);
 }
 
 schema-editor-wrapper legend {
@@ -37,17 +37,26 @@ schema-editor-wrapper schema-editor-wrapper schema-editor-wrapper legend {
   font-weight: var(--q-h4-weight);
 }
 
-schema-editor-wrapper schema-editor-wrapper schema-editor-wrapper schema-editor-wrapper legend {
+schema-editor-wrapper
+  schema-editor-wrapper
+  schema-editor-wrapper
+  schema-editor-wrapper
+  legend {
   font-size: var(--q-h5-size);
   font-weight: var(--q-h5-weight);
 }
 
-schema-editor-wrapper schema-editor-wrapper schema-editor-wrapper schema-editor-wrapper schema-editor-wrapper legend {
+schema-editor-wrapper
+  schema-editor-wrapper
+  schema-editor-wrapper
+  schema-editor-wrapper
+  schema-editor-wrapper
+  legend {
   font-size: var(--q-h5-size);
   font-weight: var(--q-h5-weight);
 }
 
 .schema-editor-input {
   display: block;
-  margin-bottom: var(--q-space-base);
+  margin-bottom: calc(var(--q-space-base) * 2);
 }
