--- a/client/src/styles/fonts.css
+++ b/client/src/styles/fonts.css
@@ -8,35 +8,35 @@ h1 {
   font-size: var(--q-h1-size);
   font-weight: var(--q-h1-weight);
   margin-top: 0;
-  margin-bottom: var(--q-space-base);
+  margin-bottom: calc(var(--q-space-base) * 2);
 }
 
 h2 {
   font-size: var(--q-h2-size);
   font-weight: var(--q-h2-weight);
   margin-top: 0;
-  margin-bottom: var(--q-space-base);
+  margin-bottom: calc(var(--q-space-base) * 2);
 }
 
 h3 {
   font-size: var(--q-h3-size);
   font-weight: var(--q-h3-weight);
   margin-top: 0;
-  margin-bottom: calc(var(--q-space-base) / 2);
+  margin-bottom: var(--q-space-base);
 }
 
 h4 {
   font-size: var(--q-h4-size);
   font-weight: var(--q-h4-weight);
   margin-top: 0;
-  margin-bottom: calc(var(--q-space-base) / 2);
+  margin-bottom: var(--q-space-base);
 }
 
 h5 {
   font-size: var(--q-h5-size);
   font-weight: var(--q-h5-weight);
   margin-top: 0;
-  margin-bottom: calc(var(--q-space-base) / 2);
+  margin-bottom: var(--q-space-base);
 }
 
 h6 {
@@ -44,7 +44,7 @@ h6 {
   font-weight: var(--q-h6-weight);
   color: var(--q-text-light-color);
   margin-top: 0;
-  margin-bottom: calc(var(--q-space-base) / 2);
+  margin-bottom: var(--q-space-base);
 
   padding-bottom: 3px;
 }
