--- a/client/src/styles/q-form.css
+++ b/client/src/styles/q-form.css
@@ -98,19 +98,20 @@
   position: absolute;
   left: 0;
   top: 0;
-  width: 18px;
-  height: 18px;
+  width: calc(var(--q-space-base) * 2);
+  height: calc(var(--q-space-base) * 2);
   background: var(--q-color-gray-1);
   border: 1px solid var(--q-color-gray-4);
 }
 
 .q-form__checkbox input[type="checkbox"]:checked + span::before {
-  content: "\2713";
-  font-size: 16px;
+  content: "\2714";
+  font-size: calc(var(--q-space-base) + var(--q-space-base) / 2);
   color: white;
   text-align: center;
-  line-height: 18px;
+  line-height: calc(var(--q-space-base) * 2);
   background: var(--q-color-primary-2);
+  border: 0;
 }
 
 /*
@@ -162,8 +163,8 @@
 
 .q-form input[type="radio"] + label::before {
   content: "";
-  width: 1.4em;
-  height: 1.4em;
+  width: calc(var(--q-space-base) * 2);
+  height: calc(var(--q-space-base) * 2);
   margin-right: 5px;
   position: relative;
   background-color: var(--q-color-gray-2);
@@ -180,4 +181,5 @@
 
 .q-form input[type="radio"]:checked + label::before {
   background-color: var(--q-color-primary-2);
+  border: 0;
 }
