Limit add source button to 160px

--- a/client/src/elements/schema-editor/schema-editor-array.css
+++ b/client/src/elements/schema-editor/schema-editor-array.css
@@ -39,6 +39,7 @@ schema-editor-array {
 
 .schema-editor-array__add-item-button {
   margin: var(--q-space-base) 0;
+  width: 160px;
 }
 
 .schema-editor-array__entry-actions {
