--- a/client/src/elements/organisms/q-bar.css
+++ b/client/src/elements/organisms/q-bar.css
@@ -3,7 +3,7 @@ q-bar {
   flex-direction: row;
   align-items: center;
   background: var(--q-color-gray-1);
-  box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.05);
   position: fixed;
   width: 100%;
   height: calc(var(--q-space-base) * 7);
