--- a/client/src/styles/q-form.css
+++ b/client/src/styles/q-form.css
@@ -104,6 +104,11 @@
   border: 1px solid var(--q-color-gray-4);
 }
 
+.q-form__checkbox input[type="checkbox"] + span:hover::before {
+  border-color: var(--q-color-primary-2);
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
+}
+
 .q-form__checkbox input[type="checkbox"]:checked + span::before {
   content: "\2714";
   font-size: calc(var(--q-space-base) + var(--q-space-base) / 2);
@@ -176,10 +181,15 @@
 
 .q-form input[type="radio"] + label:hover::before {
   border-color: var(--q-color-primary-2);
-  background-color: var(--q-color-primary-1);
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
 }
 
 .q-form input[type="radio"]:checked + label::before {
-  background-color: var(--q-color-primary-2);
+  width: calc(var(--q-space-base) - 2px);
+  height: calc(var(--q-space-base) - 2px);
+  margin-right: calc(var(--q-space-base) + 2px);
+  margin-left: calc(var(--q-space-base) - 3px);
+  background-color: white;
+  box-shadow: 0 0 0 calc(var(--q-space-base) - 3px) var(--q-color-primary-2);
   border: 0;
 }
