--- a/client/src/elements/item-preview/preview-container.css
+++ b/client/src/elements/item-preview/preview-container.css
@@ -4,5 +4,6 @@ preview-container {
   overflow: auto;
   width: 100%;
   margin-top: calc(var(--q-space-base) * 2);
-  margin-bottom: var(--q-space-base);
+  margin-right: calc(var(--q-space-base) * 2);
+  margin-bottom: calc(var(--q-space-base) * 2);
 }
