--- a/client/src/elements/molecules/notification.css
+++ b/client/src/elements/molecules/notification.css
@@ -1,14 +1,14 @@
 .notification {
   position: relative;
-  padding: var(--q-space-base);
-  margin-top: calc(var(--q-space-base) * 1.2);
+  padding: calc(var(--q-space-base) * 2);
+  margin-top: calc(var(--q-space-base) * 2.4);
   border-radius: 4px;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2);
   width: 180px;
 }
 
 .notification__content {
-  padding-top: calc(var(--q-space-base) / 2);
+  padding-top: var(--q-space-base);
 }
 
 .notification__title {
@@ -21,8 +21,8 @@
 
 .notification__icon-container {
   position: absolute;
-  top: calc(0px - var(--q-space-base));
-  left: calc(var(--q-space-base) / 2);
+  top: calc(0px - var(--q-space-base) * 2);
+  left: var(--q-space-base);
 }
 
 .notification__icon {
@@ -33,7 +33,7 @@
 }
 
 .notification__icon--medium {
-  background-color: var(--q-color-primary-5);
+  background-color: var(--q-color-primary-2);
   color: var(--q-color-white);
 }
 
@@ -44,12 +44,12 @@
 
 .notification--low {
   background-color: var(--q-color-white);
-  color: var(--q-color-primary-5);
+  color: var(--q-color-primary-2);
 }
 
 .notification--medium {
   background-color: var(--q-color-white);
-  color: var(--q-color-primary-5);
+  color: var(--q-color-primary-2);
 }
 
 .notification--high {
