--- a/client/src/elements/organisms/q-bar.css
+++ b/client/src/elements/organisms/q-bar.css
@@ -38,6 +38,6 @@ q-bar {
   padding-right: calc(var(--q-space-base) * 3);
 }
 
-.q-bar__help {
+.q-bar__right > * {
   padding-left: calc(var(--q-space-base) * 2);
 }
