--- a/client/src/elements/atoms/icon-button.css
+++ b/client/src/elements/atoms/icon-button.css
@@ -79,3 +79,17 @@ icon-button.size-big button {
   border-radius: 24px;
 }
 
+icon-button.size-huge {
+  height: 80px;
+}
+
+icon-button.size-huge .icon-button__icon {
+  height: 78px;
+  width: 78px;
+}
+
+icon-button.size-huge button {
+  height: 80px;
+  border-radius: 40px;
+}
+
