--- a/client/src/elements/organisms/tool-selection.css
+++ b/client/src/elements/organisms/tool-selection.css
@@ -1,7 +1,8 @@
 tool-selection {
   display: block;
   position: relative;
-  padding: calc(var(--q-space-base) * 4) 0;
+  padding-top: calc(var(--q-space-base) * 4);
+  padding-bottom: calc(var(--q-space-base) * 4);
   border-top: 1px solid var(--q-color-gray-4);
   border-bottom: 1px solid var(--q-color-gray-4);
 
@@ -16,6 +17,7 @@ tool-selection h2 {
   position: absolute;
   right: 0;
   top: calc(var(--q-space-base) * 4);
+  padding-right: inherit;
 }
 
 .tool-selection__list {
