--- a/client/src/styles/config.css
+++ b/client/src/styles/config.css
@@ -1,7 +1,7 @@
 :root {
   /* colors */
-  --q-color-primary-3: #272ca9;
-  --q-color-primary-2: #2c32bd;
+  --q-color-primary-3: #13175f;
+  --q-color-primary-2: #1d2284;
   --q-color-primary-1: #9598dd;
 
   --q-color-yes-5: #66a622;
