(tool selection) show max 6 tools in a row in tool-selection

--- a/client/src/elements/organisms/tool-selection.css
+++ b/client/src/elements/organisms/tool-selection.css
@@ -21,6 +21,7 @@ tool-selection h2 {
 }
 
 .tool-selection__list {
+  max-width: 1400px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
