--- a/client/src/elements/molecules/radio-button-group.css
+++ b/client/src/elements/molecules/radio-button-group.css
@@ -7,8 +7,9 @@ radio-button-group {
 .radio-button-group__option {
   position: relative;
   flex-shrink: 0;
+  flex-grow: 1;
   width: 100px;
-  height: 30px;
+  height: calc(var(--q-space-base) * 4);
 }
 
 radio-button-group.radio-button-group--compact .radio-button-group__option {
@@ -20,6 +21,7 @@ radio-button-group.radio-button-group--compact .radio-button-group__option {
   align-items: center;
   justify-content: center;
   width: 100%;
+  height: 100%;
   padding: 0 5px;
   cursor: pointer;
   background: var(--q-color-white);
@@ -30,6 +32,7 @@ radio-button-group.radio-button-group--compact .radio-button-group__option {
   border-right-width: 0;
   border-top-width: 1px;
   border-bottom-width: 1px;
+  white-space: nowrap;
 }
 
 .radio-button-group__option:first-child label {
@@ -52,6 +55,7 @@ radio-button-group.radio-button-group--compact .radio-button-group__option {
 }
 
 .radio-button-group__option input[type="radio"] {
+  position: absolute;
   visibility: hidden;
   width: 0;
   height: 0;
