--- a/client/src/elements/organisms/items-filter.css
+++ b/client/src/elements/organisms/items-filter.css
@@ -5,8 +5,16 @@ items-filter {
 items-filter .items-filter-container {
   display: flex;
   justify-content: space-between;
+  margin-left: calc(var(--q-space-base) * -1);
+  margin-right: calc(var(--q-space-base) * -1);
+}
+
+items-filter .items-filter-container > * {
+  flex-grow: 1;
+  margin-left: var(--q-space-base);
+  margin-right: var(--q-space-base);
 }
 
 items-filter .items-filter-container select {
-  margin: 0 calc(var(--q-space-base) / 2);
+  /* margin: 0 calc(var(--q-space-base) / 2); */
 }
