--- a/client/src/styles/q-form.css
+++ b/client/src/styles/q-form.css
@@ -131,9 +131,9 @@
 
 */
 .q-form select {
-  height: 2.4375rem;
+  height: calc(var(--q-space-base) * 4);
   margin: 0;
-  padding: var(--q-space-base);
+  padding: calc(var(--q-space-base) / 2) calc(var(--q-space-base) / 2) calc(var(--q-space-base) / 2) calc(var(--q-space-base));
   appearance: none;
   -webkit-appearance: none;
   border-radius: 0;
@@ -153,7 +153,7 @@
   radio
 
 */
-.q-form input[type="radio"] {
+.q-form__radio input[type="radio"] {
   opacity: 0;
   position: absolute;
   margin: 0px;
@@ -162,7 +162,7 @@
   height: 2em;
 }
 
-.q-form input[type="radio"] + label {
+.q-form__radio input[type="radio"] + label {
   line-height: 2em;
   position: relative;
   display: flex;
@@ -172,7 +172,7 @@
   cursor: pointer;
 }
 
-.q-form input[type="radio"] + label::before {
+.q-form__radio input[type="radio"] + label::before {
   content: "";
   width: calc(var(--q-space-base) * 2);
   height: calc(var(--q-space-base) * 2);
@@ -185,12 +185,12 @@
   cursor: pointer;
 }
 
-.q-form input[type="radio"] + label:hover::before {
+.q-form__radio input[type="radio"] + label:hover::before {
   border-color: var(--q-color-primary-2);
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
 }
 
-.q-form input[type="radio"]:checked + label::before {
+.q-form__radio input[type="radio"]:checked + label::before {
   width: calc(var(--q-space-base) - 2px);
   height: calc(var(--q-space-base) - 2px);
   margin-right: calc(var(--q-space-base) + 2px);
