--- a/client/src/pages/index.css
+++ b/client/src/pages/index.css
@@ -55,7 +55,11 @@
 
 .index__statistics {
   text-align: center;
-  padding-top: var(--q-space-base);
-  margin: calc(var(--q-space-base) * 2) 0 0 0;
-  border-top: 1px solid var(--q-color-gray-2);
+  padding: 0;
+  position: fixed;
+  right: calc(var(--q-space-base) * 2);
+  bottom: calc(var(--q-space-base) * 2);
+  transform: rotate(270deg) translate(100%);
+  transform-origin: 100% 100%;
+  cursor: pointer;
 }
