--- a/client/src/styles/layout.css
+++ b/client/src/styles/layout.css
@@ -1,9 +1,7 @@
 html {
-  height: 100%;
 }
 
 body {
-  height: 100%;
   margin: 0;
   background-color: var(--q-color-gray-1);
   box-sizing: border-box;
@@ -16,7 +14,6 @@ body {
 }
 
 .q-container {
-  height: 100%;
   max-width: 100vw;
   overflow-y: hidden;
   display: flex;
@@ -50,11 +47,6 @@ q-screen.is-navigating {
   opacity: 0.5;
 }
 
-q-screen main {
-  height: 100%;
-  overflow-y: scroll;
-}
-
 main.item-overview {
   padding: calc(var(--q-space-base) * 6) 0;
 }
@@ -63,7 +55,10 @@ main.index {
   padding: 0 0 calc(var(--q-space-base) * 6) 0;
 }
 
-main.index > *,
+main.index > tool-selection,
+main.index > .search,
+main.index > items-filter,
+main.index > items-list,
 main.item-overview > * {
   padding-left: calc(var(--q-space-base) * 6);
   padding-right: calc(var(--q-space-base) * 6);
